@@ -6,7 +6,7 @@
       "tag": "forge:dyes/blue"
     },
     {
-      "item": "xnet:advanced_connector"
+      "tag": "xnet:advanced_connectors"
     }
   ],
   "result": {
