@@ -1,0 +1,10 @@
+{
+  "replace": false,
+  "values": [
+    "xnet:advanced_connector_blue",
+    "xnet:advanced_connector_yellow",
+    "xnet:advanced_connector_green",
+    "xnet:advanced_connector_red",
+    "xnet:advanced_connector_routing"
+  ]
+}
