@@ -1,0 +1,10 @@
+{
+  "replace": false,
+  "values": [
+    "xnet:connector_blue",
+    "xnet:connector_yellow",
+    "xnet:connector_green",
+    "xnet:connector_red",
+    "xnet:connector_routing"
+  ]
+}
